# obr-mcp-proxy

./: .env.example  .gitignore  CLAUDE.md.example  README.md  start.ps1
.github/workflows/: deploy.yml
extension/: index.html  package-lock.json  package.json  vite.config.ts
extension/public/: manifest.json
extension/src/: handlers.ts  main.ts  relay.ts  ui.ts
server/: pyproject.toml
server/server/: constants.py  dice.py  grid.py  items.py  main.py  tools.py  websocket_server.py
server/server/tools/: __init__.py  combat.py  movement.py  mutate.py  read.py  rumble.py
